apps/media/radarr/networkpolicies/egress-radarr.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-radarr
  namespace: media
spec:
  selector: app == 'radarr'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'sabnzbd'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'nzbhydra2'
        ports:
          - 5076
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'plex'
        ports:
          - 32400
