apps/media/radarr/networkpolicies/ingress-nginx-egress-radarr.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-radarr
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: radarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
          rules:
            http: [{}]
