apps/media/radarr/networkpolicies/radarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
        - matchLabels:
            app: prowlarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.radarr.video
        - matchName: hooks.slack.com
        - matchName: image.tmdb.org
        - matchName: plex.tv
        - matchName: radarr.servarr.com
        - matchName: sentry.servarr.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: prowlarr
            namespace: media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: plex
            namespace: media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: sabnzbd
            namespace: media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
